@@ -10,7 +10,7 @@
 	<td align="center">
 		<?php echo $tmp['attach'] ?>
 	</td>
-	<td nowrap="nowrap" class="inbox" align="left">
+	<td class="inbox" align="left">
 		<a href="<?php echo $PHP_SELF ?>?action=aff_mail&amp;mail=<?php echo $tmp['number'] ?>&amp;sort=<?php echo $sort ?>&amp;sortdir=<?php echo $sortdir?>&amp;verbose=0&amp;lang=<?php echo $lang ?>"><?php echo ($tmp['from']? $tmp['from'] : $html_att_unknown) ?></a>
 	</td>
 	<td class="inbox" align="left">
@@ -19,7 +19,7 @@
 	<td class="inbox" align="left">
 		<?php echo $tmp['date'] ?>
 	</td>
-	<td align="right" nowrap="nowrap" class="inbox">
+	<td nowrap="nowrap" class="inbox">
 		<?php echo $tmp['size'] ?> <?php echo $html_kb ?>
 	</td>
 </tr>
